# godot-plugin

./: .gitignore  Cargo.toml  README.md  godot(self).package  godot.package  gpm  gpm.gd  gpm_init.sh  icon.svg.import  project.godot  runner.gd  runner.tscn
.github/workflows/: release.yml
addons/godot-package-manager/: cli.gd  cli_helper.gd  dict_utils.gd  dir_utils.gd  file_utils.gd  godot_package_manager.gd  gpm.gd  http.gd  main.gd  main.tscn  net.gd  npm.gd  plugin.cfg  plugin.gd  utils.gd
addons/godot-package-manager/adaptors/: npmjs.gd
addons/godot-package-manager/classes/: advanced-expression.gd  error.gd  failed-packages.gd  hooks.gd  result.gd
addons/godot-package-manager/gui/: edit_config.gd  edit_config.tscn  logs.gd  logs.tscn  main.gd  main.tscn  npm_search.gd  npm_search.tscn  npm_search_result.gd  npm_search_result.tscn
addons/godot-package-manager/gui/info/: info.gd  info.tscn  package_info.gd  package_info.tscn
addons/godot-package-manager/gui/npm-search/: npm_search.gd  npm_search.tscn  npm_search_result.tscn
addons/godot-package-manager/model/: config.gd  lock_file.gd  model.gd  npm_tarball_info.gd  package.gd  package_list.gd  wanted_packages.gd
addons/godot-package-manager/utils/: fs.gd  http.gd  utils.gd
addons/verbal-expressions/: LICENSE  README.md  package.json  verbal_expressions.gd
runner/: dummy_plugin.gd  runner.gd  runner.tscn
src/: config_file.rs  main.rs  npm.rs  npm_manifest.rs  package.rs  utils.rs
