[package]
name = "godot-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = {version="1.0.150",features=["derive"]}
serde_json ="1.0.89"
serde_yaml = "0.9.14"
