[package]
name = "godot-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
deser-hjson = "1.0.2"
flate2 = "1.0.25"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = {version="1.0.150",features=["derive"]}
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tar = "0.4.38"
toml = "0.5.10"
